# dfisher_2022a

./: .gitignore  .readthedocs.yml  Makefile  README.md  ozstar-dev.sh  pyproject.toml
.github/workflows/: publish.yml
data/: README.md
dfisher_2022a/: __init__.py  app.py  emission_lines.py  exceptions.py  lines.py
dfisher_2022a/fits/: base.py  cpufitter.py  lmfit_ext.py
dfisher_2022a/io/: __init__.py  cube.py  line.py
dfisher_2022a/models/: __init__.py  base.py
dfisher_2022a/models/lmfit/: base.py  base_models.py  composite.py  composite_models.py
dfisher_2022a/tests/fixtures/: testing.fits
dfisher_2022a/tests/io/: setting_constants.py  test_cube.py
dfisher_2022a/tests/models/: test_base.py
dfisher_2022a/tests/utils/: test_dfisher_2022a.py
docs/: .gitignore  conf.py  index.rst  introduction.md  notes_for_developers.md
docs/_templates/: conf.py_t  root_doc.rst_t
examples/: examine_lmfit.ipynb  fitting_result.txt  pre_process_data_fit_interface_output.ipynb  single_gaussian_fit_lm.py  single_gaussian_fit_lm_fast.py  single_gaussian_fitting.ipynb  single_gaussian_full.py  single_gaussian_full_fast.py  single_gaussian_short.py
examples/.ipynb_checkpoints/: prepare_data_for_fitting-checkpoint.ipynb
lorikeet/: pyproject.toml
lorikeet/tests/: test_lorikeet.py
performance/single_gaussian/: single_gaussian.py
performance/single_gaussian/gpufit/: guess.npy  single_gaussian_gpufit.py
performance/single_gaussian/parallel/: single_gaussian.py  single_gaussian_sharedmemory.py
performance/single_gaussian/sandbox/: single_gaussian_serial.py
performance/single_gaussian/serial/: single_gaussian_profile.py  single_gaussian_serial.py
python/dfisher_2022a/: __init__.py
python/dfisher_2022a/fits/: cpufitter.py
python/dfisher_2022a/io/: base.py  cube.py
python/dfisher_2022a/tests/: test_fits.py
source/: conf.py
tests/unit/io/: test_line.py
tests/unit/models/: utils.py
