[tool.poetry]
name = "dfisher_2022a"
version = "0.0.0-dev"
description = "Spectral analysis code created for the delivery of the DFisher_2022A ADACS MAP project."
authors = ["Gregory Poole <gbpoole@gmail.com>"]
license = "MIT-expat"
packages = [
    { include = "dfisher_2022a", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
myst-parser = "^0.17.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
