[tool.poetry]
name = "dfisher_2022a"
version = "0.1.0"
description = "Spectral analysis code created for the delivery of the DFisher_2022A ADACS MAP project."
authors = ["J. Hu <jitinghu@swin.edu.au>", "Gregory Poole <gbpoole@gmail.com>"]
license = "MIT-expat"

[tool.poetry.dependencies]
python = " >=3.8,<3.10"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
numpy = "^1.8"
matplotlib = "^3.0"
astropy = "^5.0.4"
scipy = "1.6.0"
mpdaf = "^3.5"
lmfit = "^1.0.3"
numba = "^0.51"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
line_profiler = "^3.5"
memory_profiler = "^0.60"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
