[tool.poetry]
name = "dfisher_2022a"
version = "0.1.0"
description = "Spectral analysis code created for the delivery of the DFisher_2022A ADACS MAP project."
authors = ["J. Hu <jitinghu@swin.edu.au>", "Gregory Poole <gbpoole@gmail.com>"]
license = "MIT-expat"

[tool.poetry.dependencies]
python = " >=3.8,<3.10"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
numpy = "^1.8"
astropy = "^5.0.4"
scipy = "1.7.0"
mpdaf = "^3.5"
lmfit = "^1.0.3"
pandas = "^1.4.2"
dill = "^0.3.4"
pandarallel = "^1.6.1"
line-profiler = "^3.5.1"
viztracer = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ipykernel = "^6.13.0"
ray = "^1.12.0"
py-spy = "^0.3.12"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
